--- a/ansible/deploytesting.yml
+++ b/ansible/deploytesting.yml
@@ -7,7 +7,7 @@
   tasks:
          - name: copying files to testing
            copy:
-                   src: /usr/share/website
+                   src: /var/jenkins_home/workspace/Angulartest/angular/dist/website
                    dest: /home/testing
 
          - name: starting testing webserver container
