--- a/ansible/deploydeployment.yml
+++ b/ansible/deploydeployment.yml
@@ -7,16 +7,5 @@
   tasks:
          - name: copying files to deployment container
            copy:
-                   src: /usr/share/website
+                   src: /var/jenkins_home/workspace/Angulartest/angular/dist/website
                    dest: /home/deployment
-
-         - name: starting deployment webserver container
-           community.docker.docker_container:
-                   name: deployment
-                   image: httpd:latest
-                   state: started
-                   restart: yes
-                   volumes:
-                           - /home/deployment/website:/usr/local/apache2/htdocs
-                   ports:
-                           - 8081:80
