--- a/ansible/deploytesting.yml
+++ b/ansible/deploytesting.yml
@@ -10,12 +10,4 @@
                    src: /var/jenkins_home/workspace/Angulartest/angular/dist/website
                    dest: /home/testing
          - name: docker container
-            community.docker.docker_container:
-                   name: webserver
-                   image: nginx
-                   state: started
-                   restart: yes
-                   volumes:
-                           - /home:/usr/share/nginx/html
-                   ports:
-                           - 8080:80
+           command: "docker run -d -p 8080:80 --name=testing -v /home:/var/www httpd:latest"
