--- a/ansible/deploytesting.yml
+++ b/ansible/deploytesting.yml
@@ -5,6 +5,9 @@
   user: root
 
   tasks:
+         - name: docker container
+           command: "docker kill $(docker ps -q)"
+           
          - name: copying files to testing
            copy:
                    src: /var/jenkins_home/workspace/Angulartest/angular/dist/website
