--- a/ansible/cleaninstall.yml
+++ b/ansible/cleaninstall.yml
@@ -61,3 +61,7 @@
                    name: dokwerker
                    groups: docker
                    append: yes
+         - name: make testing container
+           command: "docker run -d -p 9000:80 --name=testing -v /home/ruben/project/testing:/usr/local/apache2/htdocs httpd:latest --restart=always httpd:latest"
+         - name: make publish container
+           command: "docker run -d -p 9001:80 --name=publish -v /home/ruben/project/publish:/usr/local/apache2/htdocs httpd:latest --restart=always httpd:latest"
