--- a/ansible/cleaninstall.yml
+++ b/ansible/cleaninstall.yml
@@ -62,6 +62,6 @@
                    groups: docker
                    append: yes
          - name: make testing container
-           command: "docker run -d -p 9000:80 --name=testing -v /home/project/testing:/usr/local/apache2/htdocs --restart=always httpd:latest"
+           command: "docker run -d -p 9000:80 --name=testing -v /home/project/testing/website:/usr/local/apache2/htdocs --restart=always httpd:latest"
          - name: make publish container
-           command: "docker run -d -p 9001:80 --name=publish -v /home/project/publish:/usr/local/apache2/htdocs --restart=always httpd:latest"
+           command: "docker run -d -p 9001:80 --name=publish -v /home/project/publish/website:/usr/local/apache2/htdocs --restart=always httpd:latest"
